# OOP-Projects

Proiect-1/: CMakeLists.txt  Comanda.cpp  Comanda.h  Meniu.cpp  Meniu.h  Vaccin.cpp  Vaccin.h  VaccinAntiSarsCov2.cpp  VaccinAntiSarsCov2.h  VaccinAntigripal.cpp  VaccinAntigripal.h  VaccinAntihepatic.cpp  VaccinAntihepatic.h  main.cpp
Proiect-2/: Achizitie.cpp  Achizitie.h  CMakeLists.txt  Dezinfectant.cpp  Dezinfectant.h  DezinfectantBacterii.cpp  DezinfectantBacterii.h  DezinfectantFungi.cpp  DezinfectantFungi.h  DezinfectantVirusuri.cpp  DezinfectantVirusuri.h  Masca.cpp  Masca.h  MascaChirurgicala.cpp  MascaChirurgicala.h  MascaPolicarbonat.cpp  MascaPolicarbonat.h  Stoc.cpp  Stoc.h  main.cpp
Proiect-3/: CMakeLists.txt  Copil.cpp  Copil.h  CopilCuminte.cpp  CopilCuminte.h  CopilNeastamparat.cpp  CopilNeastamparat.h  Jucarie.cpp  Jucarie.h  JucarieClasica.cpp  JucarieClasica.h  JucarieEducativa.cpp  JucarieEducativa.h  JucarieElectronica.cpp  JucarieElectronica.h  JucarieModerna.cpp  JucarieModerna.h  Meniu.cpp  Meniu.h  main.cpp
