cmake_minimum_required(VERSION 3.20)
project(Proiect-1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proiect-1 main.cpp Vaccin.cpp Vaccin.h VaccinAntigripal.cpp VaccinAntigripal.h VaccinAntiSarsCov2.cpp VaccinAntiSarsCov2.h VaccinAntihepatic.cpp VaccinAntihepatic.h Comanda.cpp Comanda.h Meniu.cpp Meniu.h)
