cmake_minimum_required(VERSION 3.20)
project(Proiect-2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proiect-2 main.cpp Masca.cpp Masca.h MascaChirurgicala.cpp MascaChirurgicala.h MascaPolicarbonat.cpp MascaPolicarbonat.h Dezinfectant.cpp Dezinfectant.h DezinfectantBacterii.cpp DezinfectantBacterii.h DezinfectantVirusuri.cpp DezinfectantVirusuri.h DezinfectantFungi.cpp DezinfectantFungi.h Achizitie.cpp Achizitie.h Stoc.cpp Stoc.h)
